--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>skill-8</artifactId>
+	<artifactId>Mr.mop/artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>skill-8</name>
 	<description>Demo project for Spring Boot MVC</description>
